tests/neg-custom-args/captures/outer-var.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:11:8 -------------------------------------
11 |    x = q           // error
   |        ^
   |        Found:    () ->{q} Unit
   |        Required: () ->{cap[test]} Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:12:9 -------------------------------------
12 |    x = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    () ->{cap[inner]} Unit
   |         Required: () ->{cap[test]} Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:13:9 -------------------------------------
13 |    y = (q: Proc)   // error
   |         ^^^^^^^
   |         Found:    () ->{cap[inner]} Unit
   |         Required: () ->{p} Unit
   |
   |         Note that reference (cap[inner] : caps.Cap), defined in method inner
   |         cannot be included in outer capture set {p} of variable y which is associated with method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:14:8 -------------------------------------
14 |    y = q           // error
   |        ^
   |        Found:    () ->{q} Unit
   |        Required: () ->{p} Unit
   |
   |        Note that reference (q : Proc), defined in method inner
   |        cannot be included in outer capture set {p} of variable y which is associated with method test
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/outer-var.scala:16:65 ------------------------------------
16 |  var finalizeActions = collection.mutable.ListBuffer[() => Unit]() // error
   |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |                        Found:    scala.collection.mutable.ListBuffer[box () => Unit]
   |                        Required: scala.collection.mutable.ListBuffer[box () ->? Unit]^?
   |
   |                        Note that the universal capability `cap`
   |                        cannot be included in capture set ? of variable finalizeActions
   |
   | longer explanation available when compiling with `-explain`
